<resources>
    <string name="app_name">Spooked</string>
    <string name="title_activity_map">Map</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confPass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="friends">Friends</string>
    <string name="send">Send</string>
    <string name="nearby">Spooked people nearby</string>
    <string name="information">Click on a spooked person to add them</string>


    <!-- notification related strings -->
    <string name="channel_id">spookyNoti</string>
    <string name="channel_name">messagesChannel</string>
    <string name="channel_description">notification</string>
</resources>
